# mate-applet-uptime

./: .configure.ac.swp  .project  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  mate-applet-uptime.spec.in
images/: Makefile.am  applet_uptime.xcf
po/: LINGUAS  bg_BG.po  de_DE.po  en_GB.po  en_US.po  hu_HU.po  mate-applet-uptime.pot  ru_RU.po
src/: Makefile.am  applet.h  main.c  menu.c  org.mate.applets.UptimeApplet.mate-panel-applet.in  org.mate.panel.applet.UptimeApplet.gschema.xml.in  org.mate.panel.applet.UptimeApplet.service.in
